# src/schema/userSchema.ts
@@ -1,0 +1,14 @@
+import z from "zod";
+
+const userSchema = z.object({
+  name: z
+    .string()
+    .min(3, { message: "Name must be at least 3 characters long" }),
+  email: z.string().email({ message: "Invalid email format" }),
+  password: z
+    .string()
+    .min(6, { message: "Password must be at least 6 characters long" }),
+  isVerified: z.boolean().optional(),
+});
+
+export default userSchema;
